--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "helmet": "^7.0.0",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^6.9.0",
     "mongoose": "^7.0.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "vite": "^5.4.10"
   }
 }
