--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jobify",
   "version": "1.0.0",
   "description": "[Jobify](https://mern-jobify-v2.onrender.com/)",
+  "proxy":"http://localhost:5173",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -15,10 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.6",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.37.3",
     "concurrently": "^8.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "datauri": "^4.1.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
