--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV= development
 PORT = 5174
-MONGO_URL=mongodb+srv://amsaAdmin:amsadeveloper000@cluster0.z7r0z.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://amsaAdmin:Admin123@cluster0.z7r0z.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 JWT_SECRET=secret
 JWT_EXPIRES_IN=1d
