--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ NODE_ENV= development
 PORT = 5173
 MONGO_URL=mongodb+srv://amsaAdmin:Admin123@cluster0.z7r0z.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
-JWT_SECRET=secret
+JWT_SECRET=admin_access
 JWT_EXPIRES_IN=1d
